--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Homework01 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Homework01 hw1a.c hw1b.c microcat.c)
+add_executable(Homework01 hw1a.c hw1b.c microcat.c writtenQuestions.c)
